# research-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: analyst.md  archivist.md  monitor.md  writer.md
.claude/commands/: daily.md  deep-dive.md  weekly.md
data/: feeds.yaml
scripts/: init_db.py  run_daily.py  run_deep_dive.py  run_weekly.py  setup_schedules.py
src/radar/: __init__.py  memory.py  orchestrator.py  theme_loader.py
src/radar/prompts/: coordinator.py
src/radar/tools/: arxiv_tool.py  rss_tool.py  twitter_tool.py
templates/: article_base.html  report_base.html
themes/: _base.yaml  action-video-generation.yaml  embodied-ai-overview.yaml  vlm-robotics.yaml  world-action-models.yaml
